--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
        map: {
            "react": "/node_modules/react/dist/react",
            "react-dom": "/node_modules/react-dom/dist/react-dom",
+           "redux": "/node_modules/redux/dist/redux",
            "monaco-editor": "/node_modules/monaco-editor/min/vs/editor/editor.main",
            //"vs": "/node_modules/monaco-editor/min/vs"
        }
