load built stylesheet on index

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Alsatian TypeScript test framework</title>
+    <link href="/css/styles.css" rel="stylesheet" type="text/css">
     <script src="/node_modules/systemjs/dist/system.src.js"></script>
     <!--script src="/node_modules/monaco-editor/min/vs/loader.js"></script-->
     <script>
