split out app router

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
            //"vs": "/node_modules/monaco-editor/min/vs"
        }
      });
-     System.import("/ts/app-component.js")
+     System.import("/ts/app-router.js")
            .then(null, console.error.bind(console));
     </script>
   </head>
