--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <title>Alsatian TypeScript test framework</title>
     <link href="/css/styles.css" rel="stylesheet" type="text/css">
     <script src="/node_modules/systemjs/dist/system.src.js"></script>
+      <script src="/node_modules/highlight.js/lib/highlight.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/languages/typescript.min.js"></script>
+      <script>hljs.initHighlightingOnLoad();</script>
     <!--script src="/node_modules/monaco-editor/min/vs/loader.js"></script-->
     <script>
     System.config({
@@ -15,6 +18,7 @@
            "react-router": "/node_modules/react-router/umd/reactrouter",
            "redux": "/node_modules/redux/dist/redux",
            "monaco-editor": "/node_modules/monaco-editor/min/vs/editor/editor.main",
+           "highlight.js": "/node_modules/highlight.js/lib/highlight"
            //"vs": "/node_modules/monaco-editor/min/vs"
        }
      });
