--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Alsatian TypeScript test framework</title>
-    <link href="/css/styles.css" rel="stylesheet" type="text/css">
-    <script src="/node_modules/systemjs/dist/system.src.js"></script>
+   <head>
+      <meta charset="UTF-8" />
+      <title>Alsatian TypeScript test framework</title>
+      <link href="/css/styles.css" rel="stylesheet" type="text/css">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <script src="/node_modules/systemjs/dist/system.src.js"></script>
       <script src="/node_modules/highlight.js/lib/highlight.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/languages/typescript.min.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.4.0/languages/typescript.min.js"></script>
       <script>hljs.initHighlightingOnLoad();</script>
-    <!--script src="/node_modules/monaco-editor/min/vs/loader.js"></script-->
-    <script>
-    System.config({
-       defaultJSExtensions: true,
-       map: {
-           "react": "/node_modules/react/dist/react",
-           "react-dom": "/node_modules/react-dom/dist/react-dom",
-           "react-router": "/node_modules/react-router/umd/reactrouter",
-           "redux": "/node_modules/redux/dist/redux",
-           "monaco-editor": "/node_modules/monaco-editor/min/vs/editor/editor.main",
-           "highlight.js": "/node_modules/highlight.js/lib/highlight"
-           //"vs": "/node_modules/monaco-editor/min/vs"
-       }
-     });
-     System.import("/ts/app-router.js")
-           .then(null, console.error.bind(console));
-    </script>
-  </head>
-  <body>
-    <div id="app"></div>
-  </body>
+      <!--script src="/node_modules/monaco-editor/min/vs/loader.js"></script-->
+      <script>
+      System.config({
+         defaultJSExtensions: true,
+         map: {
+            "react": "/node_modules/react/dist/react",
+            "react-dom": "/node_modules/react-dom/dist/react-dom",
+            "react-router": "/node_modules/react-router/umd/reactrouter",
+            "redux": "/node_modules/redux/dist/redux",
+            "monaco-editor": "/node_modules/monaco-editor/min/vs/editor/editor.main",
+            "highlight.js": "/node_modules/highlight.js/lib/highlight"
+            //"vs": "/node_modules/monaco-editor/min/vs"
+         }
+      });
+      System.import("/ts/app-router.js")
+      .then(null, console.error.bind(console));
+      </script>
+   </head>
+   <body>
+      <div id="app"></div>
+   </body>
 </html>
