--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <meta charset="UTF-8" />
-      <title>Alsatian TypeScript test framework</title>
+      <meta charset="UTF-8" />      
+      <title>Alsatian TypeScript test framework</title><link rel="shortcut icon" href="images/alsatian-single-logo.png" type="image/png"/ >
       <link href="/css/styles.css" rel="stylesheet" type="text/css">
       <link href="/node_modules/prismjs/plugins/line-numbers/prism-line-numbers.css" rel="stylesheet" type="text/css">
       <meta name="viewport" content="width=device-width, initial-scale=1">
