--- a/public/src/index.html
+++ b/public/src/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <!-- PAGE INFO -->
-        <title>Web App Seed</title>
+        <title>Alsatian TypeScript test framework</title>
         <link rel="icon" type="image/png" href="/images/favicon.png" />
         
         <!-- PAGE METADATA -->
@@ -20,6 +20,8 @@
         <![endif]-->
     </head>
     <body>
+        <!-- App container -->
+        <div id="app"></div>
         <!-- App loading notification -->
         <div class="app-loading-notification">
             <div class="loading-message">
